- Fix issue with player tp delay when the world changes (#419)
- UltimateClaims - fixed issue with disbanding team not disbanding claim (#425)

4.6.5

Bug Fixes:
- Fixed issues with comments in config.yml (#449) - Credit AnhNguyenlost13 (GitHub)
- Fixed bug stopping admin commands promoting and demoting offline players
- Fixed bug causing a money duplication glitch (#432)
- Fixed bug causing level `endCommands` to not run (#433)
- Fixed bug causing null teams to throw errors when running /team info (#435)
- Fixed bug causing /team echest not to work with SQL storage (#441)
- Fixed bug causing /teama teleport to throw an error (#444)
- Fixed bug causing chest claims to cause a lot of lag on servers using SQL (#429)

4.6.6:

Improvements: 
- Plugin prefix cannot be removed from fully custom help messages (#458)

Bug Fixes: 
- Fixed database disconnecting issues (#460 #466) - Credit SavageAvocado (GitHub)
- Fixed ClassCastException in the demote player command (#467 #465) - Credit SavageAvocado (GitHub)

4.6.7:

Features: 
- Added French translations - Credit Timiliris_420, Silvex (discord)

Improvements: 
- Improved Vietnamese translations - Credit Shelly (discord)

4.7.0:
NOTE: this version reworks the placeholder system, some placeholders may need to be reconfigured to the new system.

Features: 
- Added support for DecentHolograms (#472 #357) - Credit SavageAvocado (GitHub)
- Reworked placeholder system
  - Credit booksaw, SavageAvocado, Aeliios
  - Closes the issues: (#463 #451 #473 #442 #438 #389 #343 #399 #474 #470 #477)
  - Check the Wiki page for more information (https://github.com/booksaw/BetterTeams/wiki/PlaceholderAPI)

Bug Fixes: 
- Fixed IllegalStateException blocking players from leaving teams (#475 476)
- Fix bug with converting YAML to SQL (#471)

4.7.1:

Features: 
- Added Hungarian translations - Credit Bercyy (discord)

Improvements
- Updated Spanish translations - Credit Santos (discord)

Headings: 
Features: 

Improvements:

Bug Fixes: 
